Docker/k8s/40-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dax-web
  namespace: dax-autolabeling
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dax-web
  template:
    metadata:
      labels:
        app: dax-web
    spec:
      containers:
        - name: web
          image: <registry>/<repo>/dax-web:<tag>
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "0.1"
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: dax-web
  namespace: dax-autolabeling
spec:
  selector:
    app: dax-web
  ports:
    - name: http
      port: 80
      targetPort: 80
